--- a/web/src/game/create-game.html
+++ b/web/src/game/create-game.html
@@ -230,7 +230,7 @@
     }
   </style>
   <template>
-    <paper-button id="createGame" raised on-tap="addGame_">Create Game</paper-button>
+    <!-- <paper-button id="createGame" raised on-tap="addGame_">Create Game</paper-button> -->
     <ghvz-super-form id="gameForm" type-name="Game" is-mobile="[[isMobile]]" blueprint="[[makeFormBlueprint_()]]">
     </ghvz-super-form>
   </template>
