--- a/web/src/lookup/player-dialog.html
+++ b/web/src/lookup/player-dialog.html
@@ -79,7 +79,7 @@
         },
 
         toArray_(playersObject) {
-          return Utils.getValuesAsArray(playersObject);
+          return []//Utils.getValuesAsArray(playersObject);
         }
       });
     });
