--- a/web/src/chat/chat-info-drawer.html
+++ b/web/src/chat/chat-info-drawer.html
@@ -41,6 +41,8 @@
 
           selectedMenuItem: String,
 
+          chatMembersById: Object,
+
           booleanFalse: {
             type: Boolean,
             value: false,
@@ -51,17 +53,22 @@
         observers: [
           'onChatRoomIdChanged_(bridge, game, chatRoomId)',
           'onChatRoomPropertiesChanged_(currentPlayer, isAdmin, chatRoom, group)',
+          'onGroupUpdated_(bridge, game, group)',
         ],
 
         onChatRoomIdChanged_() {
-          assert(this.game.chatRooms[this.chatRoomId]);
-          this.bridge.listenToChatRoom(this.game.id, this.chatRoomId).then(serverChatRoom => {
-            this.chatRoom = serverChatRoom;
-            assert(this.game.groups[this.chatRoom.associatedGroupId]);
-            this.bridge.listenToGroup(this.game.id, this.chatRoom.associatedGroupId).then(serverGroup => {
-              this.group = serverGroup;
-            })
-          });
+          //assert(this.game.chatRooms[this.chatRoomId]);
+          let self = this;
+          this.chatMembersById = {};
+          let groupUpdatedCallback = function (serverGroup) {
+            self.set('group', serverGroup);
+          };
+          let chatUpdatedCallback = function (serverChatRoom) {
+            self.set('chatRoom', serverChatRoom);
+            //assert(self.game.groups[serverChatRoom.associatedGroupId]);
+            self.bridge.listenToGroup(self.game.id, serverChatRoom.associatedGroupId, groupUpdatedCallback);
+          };
+          this.bridge.listenToChatRoom(this.game.id, this.chatRoomId, chatUpdatedCallback);
         },
 
         onChatRoomPropertiesChanged_() {
@@ -77,8 +84,21 @@
           this.showPlayerDropdown = this.canRemoveOthers;
         },
 
-        getPlayerName_(playerId) {
-          return this.game.players[playerId].name;
+        async onGroupUpdated_() {
+          this.chatMembersById = await this.bridge.getPlayersInGroup(this.game.id, this.group);
+        },
+
+        async getPlayerName_(playerId) {
+          if (this.chatMembersById != undefined && this.chatMembersById[playerId]) {
+            return this.chatMembersById[playerId];
+          }
+          var player = await this.bridge.getPlayerOnce(this.game.id, playerId);
+          this.chatMembersById[playerId] = player;
+          return this.chatMembersById[playerId];
+        },
+
+        toArray(memberObject) {
+          return Utils.toArray(memberObject);
         },
 
         captureTap_(e) {
@@ -206,20 +226,20 @@
 
       <div id="players-list" class="drawer-section">
         <div class="info-label" name="num-players">[[group.members.length]] members</div>
-        <template is="dom-repeat" items="[[group.members]]" as="playerId">
-          <div name$="[[getPlayerName_(playerId)]]">
+        <template is="dom-repeat" items="[[toArray(chatMembersById)]]" as="playerObject">
+          <div name$="[[playerObject.value.name]]">
             <div class=" layout horizontal player-entry">
               <div class="layout horizontal player-info" on-tap="captureTap_" data-action="profile"
                 data-player-id$="[[playerId]]">
-                <ghvz-player-avatar medium bridge="[[bridge]]" game="[[game]]" player-id="[[playerId]]">
+                <ghvz-player-avatar medium bridge="[[bridge]]" game="[[game]]" player-id="[[playerObject.value.id]]">
                 </ghvz-player-avatar>
                 <div class='player-name'>
-                  [[getPlayerName_(playerId)]]
+                  [[playerObject.value.name]]
                 </div>
               </div>
               <template is="dom-if" if="[[showPlayerDropdown]]">
-                <i class="material-icons kick" id$="kick-[[getPlayerName_(playerId)]]" on-tap='captureTap_'
-                  data-action="kick" data-player-id$="[[playerId]]">
+                <i class="material-icons kick" id$="kick-[[playerObject.value.name]]" on-tap='captureTap_'
+                  data-action="kick" data-player-id$="[[playerObject.value.id]]">
                   clear
                 </i>
                 <!-- <paper-menu-button restore-focus-on-close="[[booleanFalse]]">
