--- a/web/src/profile/profile-page.html
+++ b/web/src/profile/profile-page.html
@@ -66,7 +66,7 @@
 
         onPlayerIdChanged_() {
           let self = this;
-          let playerUpdatedCallback = function (playerId, player) {
+          let playerUpdatedCallback = function (player) {
             self.player = player;
           }
           this.bridge.listenToPlayer(this.game.id, this.playerId, playerUpdatedCallback);
@@ -246,9 +246,11 @@
     <template is="dom-if" if="[[seePrivateInfo_(isAdmin, actingPlayerId, playerId)]]">
       <div id="details">
         <div name="notifications-sound">Notifications should sound:
-          <b>[[computeBooleanText_(player.private.notificationSettings.sound)]]</b></div>
+          <b>[[computeBooleanText_(player.private.notificationSettings.sound)]]</b>
+        </div>
         <div name="notifications-vibration">Notifications should vibrate:
-          <b>[[computeBooleanText_(player.private.notificationSettings.vibrate)]]</b></div>
+          <b>[[computeBooleanText_(player.private.notificationSettings.vibrate)]]</b>
+        </div>
 
         <template is="dom-if" if="[[isAdmin]]">
           <!-- <div name="volunteered-for">
