Implement a bunch of stuff for web firestore version
Converted a bunch of functions from fake server to firebase emulator in web bridge code. Includes player infect, allegience change, mission creation and fetching, and chat room creation to name a few. The app is starting to be pretty functional again!

--- a/web/src/missions/mission.html
+++ b/web/src/missions/mission.html
@@ -42,7 +42,7 @@
         onMissionIdChanged_() {
           let self = this
           let onMissionUpdatedCallback = function (mission) {
-            self.mission = mission;
+            self.set("mission", mission);
           }
           this.bridge.listenToMission(this.game.id, this.missionId, onMissionUpdatedCallback);
         },
