Add ability to change player allegiance and update profile UI

--- a/web/index.html
+++ b/web/index.html
@@ -53,6 +53,7 @@
     lazyRegister: true
   };
 </script> -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet">
   <link rel="import" href="/bower_components/iron-flex-layout/iron-flex-layout.html">
   <link rel="import" href="/bower_components/iron-flex-layout/iron-flex-layout-classes.html">
   <link rel="import" href="/bower_components/iron-icons/iron-icons.html">
@@ -219,6 +220,7 @@
   <link rel="import" href="/src/game/create-populated-game.html">
   <link rel="import" href="/src/game/game-details.html">
   <link rel="import" href="/src/game/game-list.html">
+  <link rel="import" href="/src/game/game-list-page.html">
   <link rel="import" href="/src/game/game-list-item.html">
   <link rel="import" href="/src/game/game-summary.html">
   <link rel="import" href="/src/gamestats/game-stat-summary.html">
@@ -250,6 +252,7 @@
   <link rel="import" href="/src/notifications/unseen-notifications.html">
   <link rel="import" href="/src/playertable/player-row.html">
   <link rel="import" href="/src/playertable/player-table.html">
+  <link rel="import" href="/src/profile/dialog-change-allegiance.html">
   <link rel="import" href="/src/profile/profile-page.html">
   <link rel="import" href="/src/profile/reward-badge.html">
   <link rel="import" href="/src/registration/game-registration.html">
