--- a/web/src/chat/chat-info-drawer.html
+++ b/web/src/chat/chat-info-drawer.html
@@ -230,7 +230,7 @@
           <div name$="[[playerObject.value.name]]">
             <div class=" layout horizontal player-entry">
               <div class="layout horizontal player-info" on-tap="captureTap_" data-action="profile"
-                data-player-id$="[[playerId]]">
+                data-player-id$="[[playerObject.value.id]]">
                 <ghvz-player-avatar medium bridge="[[bridge]]" game="[[game]]" player-id="[[playerObject.value.id]]">
                 </ghvz-player-avatar>
                 <div class='player-name'>
