--- a/web/src/chat/chat-room-settings.html
+++ b/web/src/chat/chat-room-settings.html
@@ -58,11 +58,11 @@
           }
         },
 
-        computeChatPage_: function(chatRoomId) {
+        computeChatPage_: function (chatRoomId) {
           return "chat/" + chatRoomId;
         },
 
-        openForCreate: function() {
+        open: function () {
           this.$.settingsForm.open();
           if (this.isAdmin) {
             this.async(() => {
@@ -71,7 +71,7 @@
           }
         },
 
-        updateDoneEnabled_: function() {
+        updateDoneEnabled_: function () {
           if (this.newName == "") {
             this.doneEnabled = false;
             return;
@@ -79,10 +79,10 @@
           this.doneEnabled = true;
         },
 
-        createChatRoom_: function() {
+        createChatRoom_: function () {
           this.doneEnabled = false;
           let name = this.$.chatName.value;
-          
+
           let properties = {};
 
           if (this.isAdmin) {
@@ -115,54 +115,47 @@
     :host {
       display: block;
     }
+
     paper-checkbox {
       --paper-checkbox-vertical-align: top;
       --paper-checkbox-margin: 2px 0 0 0;
     }
+
     paper-dropdown-menu {
       margin-top: 16px;
     }
+
     .contents {
-      @apply(--layout-vertical)
-      padding: 8px;
+      @apply(--layout-vertical) padding: 8px;
     }
+
     .input {
       padding-top: 16px;
     }
+
     .option {
       font-size: 16px;
       padding-top: 16px;
     }
+
     .subtext {
       color: darkgrey;
       font-size: 12px;
     }
   </style>
   <template>
-    <ghvz-form
-      id="settingsForm"
-      title="Chat Settings"
-      close-label="Cancel"
-      done-label="Create"
-      done-enabled="[[doneEnabled]]"
-      on-ghvz-form-done="createChatRoom_">
+    <ghvz-form id="settingsForm" title="Chat Settings" close-label="Cancel" done-label="Create"
+      done-enabled="[[doneEnabled]]" on-ghvz-form-done="createChatRoom_">
       <div class="contents">
-        <paper-input 
-          id="chatName"
-          class="input"
-          auto-validate
-          error-message="Name required!"
-          label="Name"
-          no-label-float
-          maxlength="40"
-          value="{{newName}}">
+        <paper-input id="chatName" class="input" auto-validate error-message="Name required!" label="Name"
+          no-label-float maxlength="40" value="{{newName}}">
         </paper-input>
         <template is="dom-if" if="[[!isAdmin]]">
           <paper-checkbox id="allegianceFilter" class="option">
             <template is="dom-if" if="[[player]]">
               [[getPlayerAllegiance_(player)]] only
               <div class="subtext">
-              Have the server prune players from chat if they are no longer [[getPlayerAllegiance_(player)]]
+                Have the server prune players from chat if they are no longer [[getPlayerAllegiance_(player)]]
               </div>
             </template>
           </paper-checkbox>
@@ -193,15 +186,17 @@
           <paper-checkbox id="autoAdd" class="option">
             Automatically add members
             <div class="subtext">
-              Auto add new players based on the Alliegance filter, if no alliegance filter is set auto add all players in the game to this chat
+              Auto add new players based on the Alliegance filter, if no alliegance filter is set auto add all players
+              in the game to this chat
             </div>
-          </paper-checkbox>  
+          </paper-checkbox>
           <paper-checkbox id="autoRemove" class="option">
             Automatically remove members
             <div class="subtext">
-              Auto remove players based on the Alliegance filter, if no alliegance filter is set then this will do nothing.
+              Auto remove players based on the Alliegance filter, if no alliegance filter is set then this will do
+              nothing.
             </div>
-          </paper-checkbox>  
+          </paper-checkbox>
         </template>
       </div>
     </ghvz-form>
